# pydoctor

./: .env.example  .gitignore  LICENSE  README.md  TODO.md  config.json  configs.yaml  configs_kaggle.yaml  export_onnx.py  finetune.py  instruct_model_card.md  pretrain.py  pyproject.toml  run_cli.py  temp_fix_instruct.py  temp_fix_our.py  test_inference_our.py
.github/workflows/: release.yml
TEST-gemma/: finetune.py  prepare_finetune_data.py
data_prep/: prepare_pretrain_data.py
scripts/: compile_cli.bash  compile_cli_local.bash  compile_cli_unix.bash  compile_cli_windows.ps1  explore_data.ipynb  explore_libs_data.py  explore_tokenized_finetune_data.py  export_gguf.bash  export_instruct_gguf.bash  export_onnx.py  export_our_gguf.bash  generate_synthetic_docstrings.py  install.ps1  install.sh  plot_test.py  prepare_big_data.py  prepare_finetune_data.py  prepare_libs_data.py  prepare_pretrain_data.py  preprocess_libs_data.py  save_tokenizer.py  test_inference_gemma.py  test_inference_instruct.py  tokenize_libs.py
src/: tokenizer.py
src/cst/: code_extractor.py
src/model/: decoder_arch.py  init_weights.py  rope.py
src/utils/: config_models.py  extract_code_stack_libs.py  init_weights.py  libs_data.py  preprocessing.py  save_load.py  save_model.py  save_tokenizer.py  tokenize.py  tokenizer.py
synthetic_data_prep/: generate_synthetic_docstrings.py  prepare_finetune_synthetic.py  prepare_instruct_finetune_synthetic.py
training/: finetune.py  instruct_finetune.py
