[project]
name = "pydoctor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "libcst>=1.8.6",
    "matplotlib>=3.11.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "requests>=2.34.2",
    "rotary-embedding-torch>=0.8.9",
    "torch>=2.12.0",
    "tqdm>=4.68.2",
    "transformers>=5.12.0",
]

[tool.pyright]
exclude = [
    ".venv",
    "**/__pycache__",
    "data"
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true


[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]