[project]
name = "pydoctor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "libcst>=1.8.6",
    "matplotlib>=3.11.0",
    #"optimum-onnx[onnxruntime]>=0.1.0",
    "peft>=0.19.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "requests>=2.34.2",
    "torch>=2.12.0",
    "tqdm>=4.68.2",
    "transformers>=5.13.0",
]

[tool.pyright]
exclude = [
    ".venv",
    "**/__pycache__",
    "data"
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true


[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
