[project]
name = "pydoctor"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydoctor-cli",
    "pydoctor-model-pipeline",
    "pydoctor-shared-cst",
]



[tool.uv.workspace]
members = [
    "packages/pydoctor_cli",
    "packages/pydoctor_model_pipeline",
    "packages/pydoctor_shared_cst",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
pydoctor-shared-cst = { workspace = true }
pydoctor-cli = { workspace = true }
pydoctor-model-pipeline = { workspace = true }

torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

     
[tool.pyright]
exclude = [
    ".venv",
    "**/__pycache__",
    "data",
    "llama.cpp"

]



[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
]
